fix(notes): break line if content is too long

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,7 +45,7 @@ table {
 .table-scroll td.table-cell-wrap {
   max-width: 20rem;
   overflow-wrap: anywhere;
-  white-space: normal;
+  white-space: pre-line;
 }
 
 .table-scroll::-webkit-scrollbar {
